Title changed to project name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
     </style>
 
-    <title>Assignment 1 </title>
+    <title>And Gate Simulation Project</title>
 </head>
 <body>
     <div class="container">
