--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
           <h6>Other Projects</h6>
           <ul class="footer-links">
             <li><a href="https://shyam-lokhande.github.io/Kisan/">Kisan</a></li>
-            <li><a href="#">Scientific Calcultor</a></li>
-            <li><a href="#">Contribute</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Sitemap</a></li>
+            <li><a href="https://shyam-lokhande.github.io/Scientific-Calulator/">Scientific Calcultor</a></li>
+            <li><a href="https://shyam-lokhande.github.io/Shape-Dragging-and-Drawing-Project/">Shape Draw and Drag Project</a></li>
+            
           </ul>
         </div>
       </div>
